<resources>
    <string name="app_name">Who Caller?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">428543467880364</string>
    <string name="fb_login_protocol_scheme">fb428543467880364</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="low_storage_error">Low Storage</string>
    <string name="who_caller_search">Who Caller? Search</string>
    <string name="notifications">Notifications</string>
    <string name="Terms_of_Service"><u>Terms of Service</u> and</string>
    <string name="Privacy_Policy"><u>Privacy Policy</u></string>
    <string name="StringLangSetting">● change Language: English</string>
    <string name="outgoing_window">● Show Outgoing call window       </string>
    <string name="incoming_window">● Show Incoming call window       </string>
    <string name="call_window_location">Call window location</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="no_calls_yet">No calls yet</string>
    <string name="your_most_called_contacts_will_appear_here_for_easy_access">Your most called contacts will appear here for easy access</string>
    <string name="welcome_to">Welcome To</string>
    <string name="no_more_unknown_numbers">No more unknown numbers</string>
    <string name="by_proceed_i_accept_the_who_caller">By proceed. I accept the Who Caller?</string>
    <string name="proceed">Proceed</string>
    <string name="nif_you_want_toshow_dialog_of_ncaller_id_nyou_should_enableauto_start_of_nwho_caller">If you want to show dialog of \n Caller ID you should enable Auto Start of Who Caller?</string>
    <string name="may_be_later">May Be Later</string>
    <string name="go_to_enable_it">Go To Enable It</string>
    <string name="select_your_country_and">Select your country and</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="select_country">Select Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="continueee">Continue</string>
    <string name="calling_you_for_number_confirmation">Calling you for number Confirmation</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="Notification">Notification</string>
    <string name="no_result_check_internet_connection">No Result Check Internet Connection</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="faq">FAQ</string>
    <string name="send_feedback">Send feedback</string>
    <string name="share">Share</string>
    <string name="block_list">Block list</string>
    <string name="settings">Settings</string>
    <string name="phone">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="add_contact_to_chat">Add contact to chat</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="sharecontact">Save</string>
    <string name="save">Save</string>
    <string name="search_the_web">Search the Web</string>
    <string name="copy_number">Copy Number</string>
    <string name="edit">Edit</string>
    <string name="copy_name">Copy Name</string>
    <string name="copy_contact">Copy Contact</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="block_and_report_spam">Block and report spam</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="no_blocked_numbers">No Blocked numbers</string>
    <string name="no_text_deduced">No Text Deduced</string>
    <string name="speed_dial">Speed dial</string>
    <string name="voicemail">Voicemail</string>
    <string name="search_by_number">SEARCH BY NUMBER</string>
    <string name="search_by_name">SEARCH BY NAME</string>
    <string name="search">Search</string>
    <string name="to">To</string>
    <string name="click_on_your_contacts_to_send_nsame_message_to_multiple_contacts">Click on your contacts to send  same message to multiple contacts</string>
    <string name="replay_not_supported">Replay not supported</string>
    <string name="sms">SMS</string>
    <string name="block_amp_report_spam"><![CDATA[Block & report spam]]></string>
    <string name="call">CALL</string>
    <string name="block">BLOCK</string>
    <string name="message_profile">MESSAGE</string>
    <string name="view_call_histroy">View call histroy</string>
    <string name="others">others</string>
    <string name="spam">spam</string>
    <string name="yasterday">Yesterday</string>
    <string name="Today">Today</string>
    <string name="call_dialog">Call</string>
    <string name="messagedialog">Message</string>
    <string name="savedilaog">Save</string>
    <string name="blockdialog">Block</string>
    <string name="view">view</string>
    <string name="website">Website</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="choose_tag">Choose Tag</string>
    <string name="about_me">About me</string>
    <string name="_160_characters_remaining">160 characters remaining</string>
    <string name="add_contact_or_number">add contact or number</string>
    <string name="SpeedDial">Speed dial #</string>
    <string name="assign_contact">ASSIGN CONTACT</string>
    <string name="assign_phone_number">ASSIGN PHONE NUMBER</string>
    <string name="send_message">Send Message</string>
    <string name="scan_again">Scan Again</string>
    <string name="charging_card">Charging Card</string>
    <string name="message_was_not_sent">Message Was Not Sent</string>
    <string name="resend">Resend</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zib_code">Zib Code</string>
    <string name="street">Street</string>
    <string name="gender">Gender</string>
    <string name="contact_profile">CONTACT</string>
    <string name="about">ABOUT</string>
    <string name="mobile">Mobile</string>
    <string name="add_a_short_text_about_yourself">Add a short text about yourself</string>
    <string name="delete_dialog">Delete all calls</string>
    <string name="dec_delete_dialog">Are you sure you want clear all calls</string>
    <string name="income_popupmeun">Income</string>
    <string name="outgoing_popup_menu">Outgoing</string>
    <string name="missed_popup_meun">Missed</string>
    <string name="blocked_popup_menu">Blocked</string>
    <string name="delete_popup_menu">Delete all calls</string>
    <string name="dialog_voicemail">Voicemail number not configured.</string>
    <string name="dialogvoicemail2">Go to Call Settings to set the voicemail number.</string>
    <string name="today_recycleview">Today</string>
    <string name="yesterday_recycleview">Yesterday</string>
    <string name="empty_income">No income calls</string>
    <string name="empty_outgoing">No outgoing calls</string>
    <string name="empty_missed">No missed calls</string>
    <string name="empty_blocked">No blocked calls</string>
    <string name="search_btn">search</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="search_result">Search Result</string>
    <string name="loading">Loading...</string>
    <string name="toast_permission">You allowed permission, please click the button again.</string>
    <string name="toast_refused">You must approve the permission</string>
    <string name="dialog_select_phone">Select Phone Number</string>
    <string name="choose_app">Choose App</string>
    <string name="email_body">submit a suggestion or complaint</string>
    <string name="body_email">Type your mail text here</string>
    <string name="sugguestfromwhocaller">Suggestion from application Who caller?</string>
    <string name="text">Phone Number</string>
    <string name="loading_SMS">Loading SMS</string>
    <string name="toast_cant_send">Can\'t send message to this number</string>
    <string name="selectphone_dialog">Select Phone Number</string>
    <string name="dual_call">call</string>
    <string name="from">from</string>
    <string name="unblock">Unblock</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_from_call_log">Delete from call log</string>
    <string name="edit_number_dialog">Edit number before call</string>
    <string name="toast_cant_Send">Can\'t send message to this number</string>
    <string name="toast_cant_open_profile">Can\'t open profile to this number</string>
    <string name="SIM_1">SIM 1</string>
    <string name="SIM_2">SIM 2</string>
    <string name="toast_no_phone_number">No Phone Number To This Name</string>
    <string name="You_Should_Select_Your_Country">You Should Select Your Country</string>
    <string name="You_Should_Enter_Correct_Phone_Number">You Should Enter Correct Phone Number</string>
    <string name="Internet_not_access_Please_connect_to_the_internet">Internet not access Please connect to the internet</string>
    <string name="You_are_offline_Please_connect_to_the_internet">You are offline. Please connect to the internet</string>
    <string name="Phone_number_cannot_be_empty">Phone number cannot be empty!</string>
    <string name="Incorrect_number_provided">Incorrect number provided</string>
    <string name="service_error">service error</string>
    <string name="Check_your_network_state">Check your network state</string>
    <string name="Intercepting_the_verification_call_automatically_failed">Intercepting the verification call automatically failed</string>
    <string name="Copied_to_clipboard">Copied to clipboard</string>
    <string name="remove_number_toast">Number removed from your block list</string>
    <string name="added_taost">added to your block list</string>
    <string name="areyousure_dialog">Are you sure you want to block</string>
    <string name="blockcap">BLOCK</string>
    <string name="cancel_cap">CANCEL</string>
    <string name="dialog_delete_Contact_content">Are you Sure you want to delete this contact?</string>
    <string name="toast_remove">The Contact has been removed from your contacts</string>
    <string name="Send_Message_dialog">Send Message -</string>
    <string name="unblock_user_dialog">Are you sure you want to unblock this number?</string>
    <string name="unblock_captail">UNBLOCK</string>
    <string name="Error_to_Login_Facebook">Error to Login Facebook</string>
    <string name="Failure_Please_try_again">Failure,Please try again</string>
    <string name="Camera_Permission_Error">Camera Permission Error</string>
    <string name="Failed">Failed!</string>
    <string name="Permission_denied">Permission denied</string>
    <string name="error_loading">Error Loading</string>
    <string name="number_not_found">number not found</string>
    <string name="share_profile">Share</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="questionmark">\?</string>
    <string name="SMS_Messages">SMS Messages</string>
    <string name="Please_enter_message">Please enter message.</string>
    <string name="SMS_sent">SMS sent</string>
    <string name="Generic_failure">Generic failure</string>
    <string name="No_service">No service</string>
    <string name="Null_PDU">Null PDU</string>
    <string name="Radio_off">Radio off</string>
</resources>