<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/sharecontact"
        android:title="@string/share_profile"
        />


    <item
        android:id="@+id/editcontact"
        android:title="@string/edit"
        />


    <item
        android:id="@+id/copyname"
        android:title="@string/copy_name"
        />

    <item
        android:id="@+id/copynumber"
        android:title="@string/copy_number"
        />


    <item
        android:id="@+id/copycontact"
        android:title="@string/copy_contact"
        />



    <item
        android:id="@+id/searchonweb"
        android:title="@string/search_the_web"
        />


    <item
        android:id="@+id/remove"
        android:title="@string/remove_contact"
        />

</menu>