<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    tools:context="com.developer.whocaller.net.setting">

    <TextView
        android:id="@+id/changLang"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/StringLangSetting"/>

    <Switch
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/changLang"
        android:id="@+id/switch_outgoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/outgoing_window" />

    <Switch
        android:id="@+id/switch_income"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_outgoing"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/incoming_window"
         />

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/switch_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/call_window_location"
        android:id="@+id/call_window_location" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/call_window_location"
        android:layout_alignLeft="@+id/switch_income"
        android:layout_alignStart="@+id/switch_income">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/top" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:checked="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/center" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/bottom" />

    </RadioGroup>


</RelativeLayout>
