<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layoutDirection="ltr"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_margin="20dp"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:background="@color/colorPrimary"
                android:id="@+id/Message_Was_Not_Sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:padding="15dp"
                android:text="@string/message_was_not_sent"/>
            <TextView
                android:background="?android:attr/selectableItemBackground"
                android:layout_below="@+id/Message_Was_Not_Sent"
                android:id="@+id/Resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/resend"/>
            <TextView
                android:background="?android:attr/selectableItemBackground"
                android:layout_below="@+id/Resend"
                android:id="@+id/Delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/delete"/>
            <TextView
                android:background="?android:attr/selectableItemBackground"
                android:layout_below="@+id/Delete"
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/edit"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
