<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.whocaller.net.AutoStartHintActivity"
    android:background="@color/cardview_shadow_end_color"
    >
    <ImageView
        android:padding="20dp"
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/autostart"/>
<TextView
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nif_you_want_toshow_dialog_of_ncaller_id_nyou_should_enableauto_start_of_nwho_caller"
    android:gravity="center"
    android:padding="10dp"
    android:textSize="18dp"
    android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/May_be_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/may_be_later"
        android:textSize="18dp"
        android:textColor="@color/Tomyacolor"
        android:padding="10dp"
android:layout_above="@+id/Go_to_enable_it"
        />
    <TextView
        android:background="@color/colorPrimary"
        android:id="@+id/Go_to_enable_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/go_to_enable_it"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:paddingBottom="4dp"
        android:paddingTop="3dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>