<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
    android:layoutDirection="ltr">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:background="@color/colorPrimary"
                android:id="@+id/short_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:padding="15dp"
                android:text="@string/about_me"/>

            <RelativeLayout
                android:layout_below="@id/short_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/input_layout_short_text"
                    android:theme="@style/TextLabe3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/WelcomeErrorAppearance">

                    <EditText
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/edit_short_text"
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:maxLength="160"
                        android:hint="@string/about_me" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_alignStart="@+id/input_layout_short_text"
                    android:id="@+id/Num_Char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textColor="#C92C2C2C"
                    android:text="@string/_160_characters_remaining"
                    android:layout_below="@+id/input_layout_short_text"
                    android:layout_alignLeft="@+id/input_layout_short_text" />

                <RelativeLayout
                    android:layout_below="@+id/input_layout_short_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:text="@string/ok"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_toEndOf="@+id/btn_close"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:layout_height="30dp"
                        android:layout_toRightOf="@+id/btn_close" />

                    <TextView
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/btn_close"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/cancel"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="15dp"
                         />
                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
